[gd_scene load_steps=16 format=2]

[ext_resource path="res://Kenney Pirate Pixel Art/pirate_ship_1.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Laser/laser-shot.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/GunLocation.gd" type="Script" id=5]
[ext_resource path="res://HUD/circle.png" type="Texture" id=6]
[ext_resource path="res://Player/shadow.png" type="Texture" id=7]

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 320, 512 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shadow:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=14]
resource_name = "start_left"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -90.0, 0.0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "start_right"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 270.0, 180.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 90.0, 0.0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "stop_left"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "stop_right"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, 270.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shadow:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 0.0

[sub_resource type="CircleShape2D" id=7]
radius = 24.0

[sub_resource type="Animation" id=8]
resource_name = "Flash"
length = 0.2
step = 0.025

[sub_resource type="Animation" id=9]
length = 0.001

[node name="Player" type="KinematicBody2D"]
position = Vector2( 320, 512 )
scale = Vector2( 1.2, 1.2 )
script = ExtResource( 2 )
health = 8

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0.113725, 0.113725, 0.113725, 0.0588235 )
position = Vector2( 0.833344, 0.833374 )
scale = Vector2( 1.3, 1.1 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
texture = ExtResource( 1 )

[node name="ShootDelayProgress" type="TextureProgress" parent="Sprite"]
margin_left = -9.16666
margin_top = 6.66666
margin_right = 6.83334
margin_bottom = 22.6667
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 4
tint_under = Color( 0, 0, 0, 0.341176 )
tint_progress = Color( 0.0823529, 1, 0.0313726, 1 )

[node name="SpriteAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/start_left = SubResource( 14 )
anims/start_right = SubResource( 13 )
anims/stop_left = SubResource( 11 )
anims/stop_right = SubResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]

[node name="HurtboxShape" type="CollisionShape2D" parent="Hurtbox"]
visible = false
shape = SubResource( 7 )

[node name="Guns" type="Node2D" parent="."]

[node name="LeftGun" type="Node2D" parent="Guns"]
position = Vector2( -6.66666, -13.3334 )
script = ExtResource( 5 )
shoot_direction = Vector2( -1, 0 )
stopped_left_shoot_direction = Vector2( 0, -1 )
stopped_right_shoot_direction = Vector2( 0, -1 )

[node name="LeftGun2" type="Node2D" parent="Guns"]
position = Vector2( -6.66666, 13.3333 )
script = ExtResource( 5 )
shoot_direction = Vector2( -1, 0 )
stopped_left_shoot_direction = Vector2( 0, 1 )
stopped_right_shoot_direction = Vector2( 0, 1 )

[node name="RightGun" type="Node2D" parent="Guns"]
position = Vector2( 6.66666, -13.3334 )
script = ExtResource( 5 )
shoot_direction = Vector2( 1, 0 )
stopped_left_shoot_direction = Vector2( 0, -1 )
stopped_right_shoot_direction = Vector2( 0, -1 )

[node name="RightGun2" type="Node2D" parent="Guns"]
position = Vector2( 6.66666, 13.3333 )
script = ExtResource( 5 )
shoot_direction = Vector2( 1, 0 )
stopped_left_shoot_direction = Vector2( 0, 1 )
stopped_right_shoot_direction = Vector2( 0, 1 )

[node name="ShootDelay" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShootDelayTween" type="Tween" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="InvincibilityAnimation" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -35.0
pitch_scale = 0.7

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.416653, 1.25 )
scale = Vector2( 1.70833, 2.79167 )

[node name="MovementTween" type="Tween" parent="."]

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
